<resources>
    <string name="app_name">TributeApp</string>
    <string name="posts">Posts</string>
    <string name="title_activity_event">EventActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="events">Events</string>
    <string name="volunteers">Volunteers</string>
    <string name="organizations">Orgs</string>
    <string name="nav_header_title">Login to access your account</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>

    <string name="like">Like</string>
    <string name="post_image">Image of Post</string>
    <string name="error_performing_action">Error performing action</string>
    <string name="volunteer_picture_description">Picture of volunteer</string>
    <string name="followers">Followers</string>
    <string name="post_owner">Owner of post</string>
    <string name="user">User</string>
    <string name="login">Login</string>
    <string name="login_email_hint">email</string>
    <string name="login_password_hint">password</string>
    <string name="logout">Logout</string>
    <string name="interested_button">Show Interest</string>
    <string name="interested">Interested</string>
    <string name="participants">Participants</string>
    <string name="executed_logout">Successfully logged out</string>
    <string name="executed_login">Successfully logged in</string>
    <string name="register">Register</string>
    <string name="login_confirm_password_hint">confirm password</string>
    <string name="login_username_hint">username</string>
    <string name="followButton">Follow</string>
    <string name="authentication_required">Authentication required to execute action</string>
    <string name="not_interested_button">Remove interest</string>
    <string name="loading">Loading…</string>
    <string name="updated_interest">Updated interest</string>
    <string name="org_image">Image of org</string>
    <string name="event_image">Image of event</string>
    <string name="location_icon">Location icon</string>
    <string name="date_icon">Date icon</string>
    <string name="volunteer_image">Image of volunteer</string>
    <string name="event_interested">Interested: %1$d</string>
    <string name="follow_volunteer_success">Successfully followed volunteer</string>
    <string name="follow_volunteer_error">Error following volunteer</string>
    <string name="operation_success">Success</string>
    <string name="operation_error">Error</string>
    <string name="following">Following</string>
    <string name="follow_button">Follow</string>
    <string name="unfollow_button">Un-follow</string>
    <string name="post_sugestion">Thinking of…</string>
    <string name="execute_post">Post</string>
    <string name="post_body_empty_error">Error: post text cannot be empty</string>
    <string name="successfully_registered">Successfully registered! Access login to authenticate</string>
    <string name="my_profile">My profile</string>
    <string name="name_must_not_be_empty_error">Name must not be empty</string>
    <string name="email_is_invalid">Invalid email</string>
    <string name="password_is_invalid">Password is invalid!\nPasswords must have:\n- At least 8 characters.</string>
    <string name="password_arent_equal">Passwords confirmation failed</string>
    <string name="editButton">Edit</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_edit_volunteer">Edit your profile</string>
    <string name="your_posts">Posts for you</string>
    <string name="all_posts">All posts</string>
    <string name="all_events">All events</string>
    <string name="your_events">Events for you</string>
</resources>
