<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/posts_fragment">

    <fragment
        android:id="@+id/posts_fragment"
        android:name="com.example.tributeapp.ui.fragments.PostsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_posts"/>
    <fragment
        android:id="@+id/volunteers_fragment"
        android:name="com.example.tributeapp.ui.fragments.VolunteersFragment"
        android:label="@string/volunteers" />
    <fragment
        android:id="@+id/orgs_fragment"
        android:name="com.example.tributeapp.ui.fragments.OrgsFragment"
        android:label="@string/organizations" />
    <fragment
        android:id="@+id/events_fragment"
        android:name="com.example.tributeapp.ui.fragments.EventsFragment"
        android:label="@string/events" />
    <fragment
        android:id="@+id/login_fragment"
        android:name="com.example.tributeapp.ui.fragments.LoginFragment"
        android:label="@string/login" />
    <fragment
        android:id="@+id/logout_fragment"
        android:name="com.example.tributeapp.ui.fragments.LogoutFragment"
        android:label="@string/logout" />

</navigation>