<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/posts"
        android:icon="@drawable/ic_post"
        android:title="@string/posts"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/volunteers"
        android:icon="@drawable/ic_volunteer"
        android:title="@string/volunteers"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/orgs"
        android:icon="@drawable/ic_org"
        android:title="@string/organizations"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/events"
        android:icon="@drawable/ic_event"
        android:title="@string/events"
        android:visible="true"
        app:showAsAction="ifRoom" />

</menu>