<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/make_post_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/post_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:hint="@string/post_sugestion"
                        android:inputType="textMultiLine" />

                    <Button
                        android:id="@+id/post_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|bottom"
                        android:text="@string/execute_post" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <RadioGroup
                android:id="@+id/select_posts_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checkedButton="@id/all_posts_radio"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/all_posts_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_posts" />

                <RadioButton
                    android:id="@+id/your_posts_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_posts"
                    android:visibility="gone" />

            </RadioGroup>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/posts_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>