<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/fab_margin"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".ui.activities.OrgActivity"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/org_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:contentDescription="@string/org_image"
                app:srcCompat="@drawable/ic_volunteer_white"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:orientation="vertical"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    />
                <Button
                    android:id="@+id/followButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followButton"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginTop="20dp"
                    />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="2"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:id="@+id/followers_count"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/followers"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/followersCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/loading"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/following"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/followingCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/loading"
                            android:textSize="20sp" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/website_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="@dimen/fab_margin"
                    android:src="@drawable/ic_website_icon"/>

                <ImageView
                    android:id="@+id/phone_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="@dimen/fab_margin"
                    android:src="@drawable/ic_phone_icon"
                    />

                <ImageView
                    android:id="@+id/mail_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="@dimen/fab_margin"
                    android:src="@drawable/ic_mail_icon"/>

                <TextView
                    android:id="@+id/fb_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:text="Facebook"
                    android:textColor="#3239FF"/>

            </LinearLayout>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/loading"
                android:textSize="15sp"
                android:textAlignment="center"/>

        </LinearLayout>

</ScrollView>