<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/fab_margin"
    android:orientation="vertical"
    tools:context=".ui.activities.EventActivity"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/OrgImage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:srcCompat="@tools:sample/avatars"
                >
            </ImageView>

            <TextView
                android:id="@+id/OrgName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Organization"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center"
                >
            </TextView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:weightSum="2"
        >

        <ImageView
            android:id="@+id/EventImage"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_photo_default"
            >
        </ImageView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="50dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            >

            <TextView
                android:id="@+id/eventName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Event name"
                android:textSize="25sp"
                android:textStyle="bold"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_location"
                    >
                </ImageView>

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Not here"
                    android:textSize="20sp"
                    >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_date"
                    >
                </ImageView>

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4-20-2020"
                    android:textSize="20sp"
                    >
                </TextView>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interested_button"
                >
            </Button>

        </LinearLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/interested"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/interested"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/following"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/participants"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/participating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Event's description\n\n\n\n\n\n"
            >
        </TextView>

    </androidx.cardview.widget.CardView>

</LinearLayout>